--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Flappy Chodu Abbas</title>
+  <title>Flappy MB</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -18,3 +18,4 @@
 </html>
 
    
+
