--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <canvas id="gameCanvas" width="360" height="640"></canvas>
 
   <!-- preload sound -->
-  <audio id="fartSound" src="audiomass-output (2).mp3" preload="auto"></audio>
+  <audio id="fartSound" src="audiomass-output (2)-[AudioTrimmer.com].mp3" preload="auto"></audio>
  <audio id="hitSound" src="mkbaag.mp3" preload="auto"></audio>
 
   <script src="game.js"></script>
@@ -18,4 +18,5 @@
 </html>
 
    
+
 
